k8s/api-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: newfeed
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: api-gateway
          image: ghcr.io/tranloi2k/new-feed-microservices-api-gateway:b35a5f5492349d0ce22273f3afcc4859707a34ff
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 15
          resources:
            requests:
              memory: "128Mi"
              cpu: "50m"
            limits:
              memory: "384Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: newfeed
spec:
  selector:
    app: api-gateway
  ports:
    - port: 8080
      targetPort: 8080
