k8s/notification-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  namespace: newfeed
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: notification-service
          image: ghcr.io/tranloi2k/new-feed-microservices-notification-service:b35a5f5492349d0ce22273f3afcc4859707a34ff
          ports:
            - containerPort: 3005
          resources:
            requests:
              memory: "128Mi"
              cpu: "50m"
            limits:
              memory: "384Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: newfeed
spec:
  selector:
    app: notification-service
  ports:
    - port: 3005
      targetPort: 3005
